改用 nameof 撰寫 API 的名稱
需注意預設所有 "Async" 結尾的名稱都會被移除，所以 CreatedAtAction 要改成如下：

return CreatedAtAction(nameof(GetCourseAllAsync).Replace("Async", ""), new { id = course.CourseId }, course);
